# aire

./: .dockerignore  .gitignore  Dockerfile  DockerfileAPI  DockerfileEngine  README.md  celery_app.py  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yaml  main.py  pyproject.toml  pytest.ini  requirements.txt  temp_data.json
api/: api.py  test_endpoints.http
cache/: air_canada.txt
celery_config/: base_tasks.py  tasks.py
celery_queue/: tasks.py
config/: logging_config.py
ingestion/: base_scraper.py
ingestion/air_canada/: air_canada_scraper.py
ingestion/constants/: air_canada.py
ingestion/extractors/: air_canada.py  air_canada_extractor.py  base_extractor.py
ingestion/scrapers/: air_canada.py  air_canada_scraper.py  base_scraper.py
models/: flight.py  scrape_task.py
orchestration/: airlines.py  browser_manager.py  scraper_orchestrator.py
resource_management/: browser_manager.py  proxy_manager.py  rate_manager.py  resource_manager.py
scheduling/: scheduler.py
storage/: clean.py  models.py  storage.py  temp_data.json  temp_storage.py
tests/: test_connection.py  test_example.py
util/: conversions.py
